--- a/Xamalist/Xamalist.csproj
+++ b/Xamalist/Xamalist.csproj
@@ -39,6 +39,9 @@
     <Compile Include="Business Objects\AppData.cs" />
     <Compile Include="Business Objects\Author.cs" />
     <Compile Include="Business Objects\AppCategory.cs" />
+    <Compile Include="Services\IAppDataService.cs" />
+    <Compile Include="Services\AppDataService.cs" />
+    <Compile Include="Commons\Consts.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="App.xaml">
@@ -94,6 +97,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Business Objects\" />
+    <Folder Include="Services\" />
+    <Folder Include="Commons\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.1.114\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.1.114\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
