Added GitHub and Windows icons & their Columns

--- a/Xamalist.iOS/Xamalist.iOS.csproj
+++ b/Xamalist.iOS/Xamalist.iOS.csproj
@@ -161,6 +161,9 @@
     <BundleResource Include="Resources\androidEnable.png" />
     <BundleResource Include="Resources\iosDisable.png" />
     <BundleResource Include="Resources\iosEnable.png" />
+    <BundleResource Include="Resources\windowsDisable.png" />
+    <BundleResource Include="Resources\windowsEnable.png" />
+    <BundleResource Include="Resources\githubAvailable.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
