対応プラットフォームごとにアイコン出し分け処理（コンバーターを書いた）

--- a/Xamalist/Xamalist.csproj
+++ b/Xamalist/Xamalist.csproj
@@ -47,6 +47,7 @@
     </Compile>
     <Compile Include="ViewModels\DetailPageViewModel.cs" />
     <Compile Include="Controls\HyperLinkLabel.cs" />
+    <Compile Include="Commons\IconEnableDisableConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="App.xaml">
