--- a/Xamalist.Droid/Xamalist.Droid.csproj
+++ b/Xamalist.Droid/Xamalist.Droid.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Xamalist.Droid</RootNamespace>
     <AssemblyName>Xamalist.Droid</AssemblyName>
-    <TargetFrameworkVersion>v7.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
@@ -138,6 +138,13 @@
     <AndroidResource Include="Resources\drawable-hdpi\icon.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\icon.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\icon.png" />
+    <AndroidResource Include="Resources\drawable\androidDisable.png" />
+    <AndroidResource Include="Resources\drawable\androidEnable.png" />
+    <AndroidResource Include="Resources\drawable\githubAvailable.png" />
+    <AndroidResource Include="Resources\drawable\iosDisable.png" />
+    <AndroidResource Include="Resources\drawable\iosEnable.png" />
+    <AndroidResource Include="Resources\drawable\windowsDisable.png" />
+    <AndroidResource Include="Resources\drawable\windowsEnable.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\tabs.xml" />
