登録ページからリストページに戻って来た時に自動でリフレッシュがかかるようにした。（イベント発行）

--- a/Xamalist/Xamalist.csproj
+++ b/Xamalist/Xamalist.csproj
@@ -53,6 +53,7 @@
       <DependentUpon>RegisterPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\RegisterPageViewModel.cs" />
+    <Compile Include="Commons\RegisteredAppDataEvent.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="App.xaml">
