--- a/Xamalist/packages.config
+++ b/Xamalist/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Microsoft.Azure.Mobile" version="0.4.1" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Microsoft.Azure.Mobile.Analytics" version="0.4.1" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Azure.Mobile.Client" version="3.0.3" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Microsoft.Azure.Mobile.Crashes" version="0.4.1" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8+wp8" />
