--- a/Xamalist/packages.config
+++ b/Xamalist/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.Azure.Mobile" version="0.4.1" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Azure.Mobile.Analytics" version="0.4.1" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Azure.Mobile.Client" version="3.0.3" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Microsoft.Azure.Mobile.Client.SQLiteStore" version="3.0.3" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Azure.Mobile.Crashes" version="0.4.1" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable45-net45+win8+wp8" />
@@ -12,6 +13,8 @@
   <package id="Prism.Core" version="6.2.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Prism.Forms" version="6.2.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Prism.Unity.Forms" version="6.2.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.0.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="SQLitePCLRaw.core" version="1.0.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Unity" version="4.0.1" targetFramework="portable45-net45+win8+wp8" />
   <package id="Xam.Plugin.Media" version="2.6.1" targetFramework="portable45-net45+win8+wp8" />
   <package id="Xamarin.Forms" version="2.3.1.114" targetFramework="portable45-net45+win8+wp8" />
